k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oidc-example
  labels:
    app: oidc-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oidc-example
  template:
    metadata:
      labels:
        app: oidc-example
    spec:
      containers:
        - name: poc
          image: devorbitus/oidc-example
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "250m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "128Mi"
