k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: oidc-example-service
spec:
  ports:
    - port: 80
      name: http
  type: ClusterIP
  selector:
    app: oidc-example
